rewrite-jsonschema/src/main/java/org/openrewrite/jsonschema/internal/grammar/JSONSchemaParser.java
package org.openrewrite.jsonschema.internal.grammar;// Generated from /home/acouty/git/personnal/rewrite/rewrite-jsonschema/src/main/antlr/JSONSchemaParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JSONSchemaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, ID=2, REF=3, DEFS=4, SCHEMA=5, EXAMPLES=6, PROPERTIES=7, ADDITIONAL_PROPERTIES=8, 
		DYNAMIC_ANCHOR=9, DYNAMIC_REF=10, CONTAINS=11, UNEVALUATED_ITEMS=12, ONE_OF=13, 
		ALL_OF=14, TITLE=15, DEFINITIONS=16, DESCRIPTION=17, ANY_OF=18, ENUM=19, 
		ITEMS=20, PREFIXITEMS=21, CONST=22, REQUIRED=23, MINIMUM=24, MAXIMUM=25, 
		DEPENDENCIES=26, MULTIPLE_OF=27, MIN_LENGTH=28, MAX_LENGTH=29, PATTERN=30, 
		FORMAT=31, TRUE=32, FALSE=33, NULL=34, STRING_LITERAL=35, NUMBER=36, COLON=37, 
		COMMA=38, LBRACE=39, RBRACE=40, LBRACKET=41, RBRACKET=42, WS=43;
	public static final int
		RULE_jsonSchema = 0, RULE_schemaObject = 1, RULE_schemaElements = 2, RULE_schemaElement = 3, 
		RULE_idElement = 4, RULE_schemaAttribute = 5, RULE_titleElement = 6, RULE_containsElement = 7, 
		RULE_descriptionElement = 8, RULE_dynamicAnchorElement = 9, RULE_dynamicRefElement = 10, 
		RULE_typeElement = 11, RULE_propertiesElement = 12, RULE_additionalPropertiesElement = 13, 
		RULE_itemsElement = 14, RULE_enumElement = 15, RULE_formatElement = 16, 
		RULE_minimumElement = 17, RULE_maximumElement = 18, RULE_multipleOfElement = 19, 
		RULE_minLengthElement = 20, RULE_maxLengthElement = 21, RULE_patternElement = 22, 
		RULE_refElement = 23, RULE_definitionsElement = 24, RULE_defsElement = 25, 
		RULE_dependenciesElement = 26, RULE_constElement = 27, RULE_nullableElement = 28, 
		RULE_requiredElement = 29, RULE_oneOfElement = 30, RULE_allOfElement = 31, 
		RULE_anyOfElement = 32, RULE_unionTypeElement = 33, RULE_nullType = 34, 
		RULE_array = 35, RULE_object = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"jsonSchema", "schemaObject", "schemaElements", "schemaElement", "idElement", 
			"schemaAttribute", "titleElement", "containsElement", "descriptionElement", 
			"dynamicAnchorElement", "dynamicRefElement", "typeElement", "propertiesElement", 
			"additionalPropertiesElement", "itemsElement", "enumElement", "formatElement", 
			"minimumElement", "maximumElement", "multipleOfElement", "minLengthElement", 
			"maxLengthElement", "patternElement", "refElement", "definitionsElement", 
			"defsElement", "dependenciesElement", "constElement", "nullableElement", 
			"requiredElement", "oneOfElement", "allOfElement", "anyOfElement", "unionTypeElement", 
			"nullType", "array", "object"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'$id'", "'$ref'", "'$defs'", "'$schema'", "'examples'", 
			"'properties'", "'additionalProperties'", "'$dynamicAnchor'", "'$dynamicRef'", 
			"'contains'", "'unevaluatedITems'", "'oneOf'", "'allOf'", "'title'", 
			"'definitions'", "'description'", "'anyOf'", "'enum'", "'items'", "'prefixItems'", 
			"'const'", "'required'", "'minimum'", "'maximum'", "'dependencies'", 
			"'multipleOf'", "'minLength'", "'maxLength'", "'pattern'", "'format'", 
			"'true'", "'false'", "'null'", null, null, "':'", "','", "'{'", "'}'", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "ID", "REF", "DEFS", "SCHEMA", "EXAMPLES", "PROPERTIES", 
			"ADDITIONAL_PROPERTIES", "DYNAMIC_ANCHOR", "DYNAMIC_REF", "CONTAINS", 
			"UNEVALUATED_ITEMS", "ONE_OF", "ALL_OF", "TITLE", "DEFINITIONS", "DESCRIPTION", 
			"ANY_OF", "ENUM", "ITEMS", "PREFIXITEMS", "CONST", "REQUIRED", "MINIMUM", 
			"MAXIMUM", "DEPENDENCIES", "MULTIPLE_OF", "MIN_LENGTH", "MAX_LENGTH", 
			"PATTERN", "FORMAT", "TRUE", "FALSE", "NULL", "STRING_LITERAL", "NUMBER", 
			"COLON", "COMMA", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSONSchemaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSONSchemaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonSchemaContext extends ParserRuleContext {
		public SchemaObjectContext schemaObject() {
			return getRuleContext(SchemaObjectContext.class,0);
		}
		public JsonSchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonSchema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterJsonSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitJsonSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitJsonSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonSchemaContext jsonSchema() throws RecognitionException {
		JsonSchemaContext _localctx = new JsonSchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jsonSchema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			schemaObject();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaObjectContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(JSONSchemaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JSONSchemaParser.RBRACE, 0); }
		public SchemaElementsContext schemaElements() {
			return getRuleContext(SchemaElementsContext.class,0);
		}
		public SchemaObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterSchemaObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitSchemaObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitSchemaObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaObjectContext schemaObject() throws RecognitionException {
		SchemaObjectContext _localctx = new SchemaObjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_schemaObject);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(LBRACE);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 38652604350L) != 0)) {
				{
				setState(77);
				schemaElements();
				}
			}

			setState(80);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaElementsContext extends ParserRuleContext {
		public List<SchemaElementContext> schemaElement() {
			return getRuleContexts(SchemaElementContext.class);
		}
		public SchemaElementContext schemaElement(int i) {
			return getRuleContext(SchemaElementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JSONSchemaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JSONSchemaParser.COMMA, i);
		}
		public SchemaElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterSchemaElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitSchemaElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitSchemaElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaElementsContext schemaElements() throws RecognitionException {
		SchemaElementsContext _localctx = new SchemaElementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_schemaElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			schemaElement();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83);
				match(COMMA);
				setState(84);
				schemaElement();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaElementContext extends ParserRuleContext {
		public IdElementContext idElement() {
			return getRuleContext(IdElementContext.class,0);
		}
		public SchemaAttributeContext schemaAttribute() {
			return getRuleContext(SchemaAttributeContext.class,0);
		}
		public TitleElementContext titleElement() {
			return getRuleContext(TitleElementContext.class,0);
		}
		public ContainsElementContext containsElement() {
			return getRuleContext(ContainsElementContext.class,0);
		}
		public DynamicAnchorElementContext dynamicAnchorElement() {
			return getRuleContext(DynamicAnchorElementContext.class,0);
		}
		public DynamicRefElementContext dynamicRefElement() {
			return getRuleContext(DynamicRefElementContext.class,0);
		}
		public DescriptionElementContext descriptionElement() {
			return getRuleContext(DescriptionElementContext.class,0);
		}
		public TypeElementContext typeElement() {
			return getRuleContext(TypeElementContext.class,0);
		}
		public PropertiesElementContext propertiesElement() {
			return getRuleContext(PropertiesElementContext.class,0);
		}
		public AdditionalPropertiesElementContext additionalPropertiesElement() {
			return getRuleContext(AdditionalPropertiesElementContext.class,0);
		}
		public ItemsElementContext itemsElement() {
			return getRuleContext(ItemsElementContext.class,0);
		}
		public EnumElementContext enumElement() {
			return getRuleContext(EnumElementContext.class,0);
		}
		public FormatElementContext formatElement() {
			return getRuleContext(FormatElementContext.class,0);
		}
		public MinimumElementContext minimumElement() {
			return getRuleContext(MinimumElementContext.class,0);
		}
		public MaximumElementContext maximumElement() {
			return getRuleContext(MaximumElementContext.class,0);
		}
		public MultipleOfElementContext multipleOfElement() {
			return getRuleContext(MultipleOfElementContext.class,0);
		}
		public MinLengthElementContext minLengthElement() {
			return getRuleContext(MinLengthElementContext.class,0);
		}
		public MaxLengthElementContext maxLengthElement() {
			return getRuleContext(MaxLengthElementContext.class,0);
		}
		public PatternElementContext patternElement() {
			return getRuleContext(PatternElementContext.class,0);
		}
		public RequiredElementContext requiredElement() {
			return getRuleContext(RequiredElementContext.class,0);
		}
		public RefElementContext refElement() {
			return getRuleContext(RefElementContext.class,0);
		}
		public DefsElementContext defsElement() {
			return getRuleContext(DefsElementContext.class,0);
		}
		public DefinitionsElementContext definitionsElement() {
			return getRuleContext(DefinitionsElementContext.class,0);
		}
		public DependenciesElementContext dependenciesElement() {
			return getRuleContext(DependenciesElementContext.class,0);
		}
		public ConstElementContext constElement() {
			return getRuleContext(ConstElementContext.class,0);
		}
		public OneOfElementContext oneOfElement() {
			return getRuleContext(OneOfElementContext.class,0);
		}
		public AnyOfElementContext anyOfElement() {
			return getRuleContext(AnyOfElementContext.class,0);
		}
		public AllOfElementContext allOfElement() {
			return getRuleContext(AllOfElementContext.class,0);
		}
		public NullableElementContext nullableElement() {
			return getRuleContext(NullableElementContext.class,0);
		}
		public UnionTypeElementContext unionTypeElement() {
			return getRuleContext(UnionTypeElementContext.class,0);
		}
		public SchemaElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterSchemaElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitSchemaElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitSchemaElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaElementContext schemaElement() throws RecognitionException {
		SchemaElementContext _localctx = new SchemaElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_schemaElement);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				idElement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				schemaAttribute();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				titleElement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				containsElement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				dynamicAnchorElement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				dynamicRefElement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				descriptionElement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(97);
				typeElement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(98);
				propertiesElement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(99);
				additionalPropertiesElement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(100);
				itemsElement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(101);
				enumElement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(102);
				formatElement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(103);
				minimumElement();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(104);
				maximumElement();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(105);
				multipleOfElement();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(106);
				minLengthElement();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(107);
				maxLengthElement();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(108);
				patternElement();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(109);
				requiredElement();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(110);
				refElement();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(111);
				defsElement();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(112);
				definitionsElement();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(113);
				dependenciesElement();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(114);
				constElement();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(115);
				oneOfElement();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(116);
				anyOfElement();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(117);
				allOfElement();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(118);
				nullableElement();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(119);
				unionTypeElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdElementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JSONSchemaParser.ID, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(JSONSchemaParser.STRING_LITERAL, 0); }
		public IdElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterIdElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitIdElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitIdElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdElementContext idElement() throws RecognitionException {
		IdElementContext _localctx = new IdElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(ID);
			setState(123);
			match(COLON);
			setState(124);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaAttributeContext extends ParserRuleContext {
		public TerminalNode SCHEMA() { return getToken(JSONSchemaParser.SCHEMA, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(JSONSchemaParser.STRING_LITERAL, 0); }
		public SchemaAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterSchemaAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitSchemaAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitSchemaAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaAttributeContext schemaAttribute() throws RecognitionException {
		SchemaAttributeContext _localctx = new SchemaAttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_schemaAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SCHEMA);
			setState(127);
			match(COLON);
			setState(128);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleElementContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(JSONSchemaParser.TITLE, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(JSONSchemaParser.STRING_LITERAL, 0); }
		public TitleElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titleElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterTitleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitTitleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitTitleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleElementContext titleElement() throws RecognitionException {
		TitleElementContext _localctx = new TitleElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_titleElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(TITLE);
			setState(131);
			match(COLON);
			setState(132);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContainsElementContext extends ParserRuleContext {
		public TerminalNode CONTAINS() { return getToken(JSONSchemaParser.CONTAINS, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public SchemaElementContext schemaElement() {
			return getRuleContext(SchemaElementContext.class,0);
		}
		public ContainsElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_containsElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterContainsElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitContainsElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitContainsElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContainsElementContext containsElement() throws RecognitionException {
		ContainsElementContext _localctx = new ContainsElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_containsElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(CONTAINS);
			setState(135);
			match(COLON);
			setState(136);
			schemaElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionElementContext extends ParserRuleContext {
		public TerminalNode DESCRIPTION() { return getToken(JSONSchemaParser.DESCRIPTION, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(JSONSchemaParser.STRING_LITERAL, 0); }
		public DescriptionElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptionElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterDescriptionElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitDescriptionElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitDescriptionElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionElementContext descriptionElement() throws RecognitionException {
		DescriptionElementContext _localctx = new DescriptionElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_descriptionElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(DESCRIPTION);
			setState(139);
			match(COLON);
			setState(140);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DynamicAnchorElementContext extends ParserRuleContext {
		public TerminalNode DYNAMIC_ANCHOR() { return getToken(JSONSchemaParser.DYNAMIC_ANCHOR, 0); }
		public TerminalNode COLON() { return getToken(JSONSchemaParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(JSONSchemaParser.STRING_LITERAL, 0); }
		public DynamicAnchorElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dynamicAnchorElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).enterDynamicAnchorElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONSchemaParserListener) ((JSONSchemaParserListener)listener).exitDynamicAnchorElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONSchemaParserVisitor) return ((JSONSchemaParserVisitor<? extends T>)visitor).visitDynamicAnchorElement(this);
			else return visitor.visitChildren(this);
		}
	}
